# quickwit-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smoke_test.py
.github/workflows/: publish-image.yml  publish-pypi.yml
kube/: README.md  quickwit-mcp-logs.yaml  quickwit-mcp-single.yaml  quickwit-mcp-tracing.yaml
quickwit_mcp/: server.py
tests/: test_server.py
