[project]
name = "quickwit-mcp"
version = "0.1.0"
description = "MCP server exposing a curated surface of Quickwit search APIs."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4",
    "httpx>=0.27",
]

[project.scripts]
quickwit-mcp = "quickwit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickwit_mcp"]
